--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,9 @@ ext.base = project
 subprojects {
     description = base.description
     apply from: base.file('config/config.gradle')
+
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testCompile group: 'org.mockito', name: 'mockito-core', version: mockitoVersion
+    }
 }
