--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,8 @@ group = ru.endlesscode
 version = 3.0.0-SNAPSHOT
 description = Change inventory how you need
 url = https://gitlab.com/endlesscodegroup/rpginventory/rpginventory3
-gradleVersion = 4.8.1
+gradleVersion = 4.9
+mockitoVersion = 2.8.+
 
 org.gradle.jvmargs = -Xmx3G
 org.gradle.parallel = true
