Rename plugin class

--- a/core/bukkit/build.gradle
+++ b/core/bukkit/build.gradle
@@ -8,6 +8,7 @@ bukkit {
 
     meta {
         name = base.name
+        main = "ru.endlesscode.rpginventory.RPGInventoryPlugin"
         authors = ["osipxd", "Dereku", "EndlessCode Group"]
     }
 
