Use HOCON style

--- a/core/api/src/test/resources/cisValues.conf
+++ b/core/api/src/test/resources/cisValues.conf
@@ -1,17 +1,17 @@
 {
-    "magicStick":{
-        "material": "STICK",
-        "displayName": "&6Magic stick",
-        "lore": ["&7This stick can be obtained in", "&7the &cElite dungeon&7 after defeating", "&7a &4Bloody swordmaster&7."]
-    },
-    "uselessStick": {
-        "material": "STICK",
-        "displayName": "&7Useless stick",
-        "lore": ["&7This stick can be obtained everywhere,", "&7where a tree available."]
-    },
-    "justStick": {
-        "material" : "STICK",
-        "displayName": "&aJust stick",
-        "lore": ["&7Where you found it?.."]
+    magicStick {
+        material = "STICK"
+        displayName = "&6Magic stick"
+        lore = ["&7This stick can be obtained in", "&7the &cElite dungeon&7 after defeating", "&7a &4Bloody swordmaster&7."]
+    }
+    uselessStick {
+        material = "STICK"
+        displayName = "&7Useless stick"
+        lore = ["&7This stick can be obtained everywhere,", "&7where a tree available."]
+    }
+    justStick {
+        material = "STICK"
+        displayName = "&aJust stick"
+        lore = ["&7Where you found it?.."]
     }
 }
