--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,10 @@ subprojects {
 
     dependencies {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-        testCompile("junit:junit:4.12")
-        testCompile("org.mockito:mockito-core:$mockitoVersion")
+        testImplementation("junit:junit:4.12")
+        testImplementation("org.jetbrains.kotlin:kotlin-test-junit")
+        testImplementation("org.mockito:mockito-inline:2.23.0")
+        testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0")
     }
 
     tasks.withType(KotlinCompile).all {
