--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,6 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 // Apply shared configuration to subprojects
 buildscript {
-    ext.kotlinVersion = "1.2.61"
+    ext.kotlinVersion = "1.3.31"
 
     repositories {
         mavenCentral()
@@ -33,11 +31,11 @@ subprojects {
         testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0")
     }
 
-    tasks.withType(KotlinCompile).all {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
         kotlinOptions {
             jvmTarget = "1.8"
-            apiVersion = "1.2"
-            languageVersion = "1.2"
+            apiVersion = "1.3"
+            languageVersion = "1.3"
         }
     }
 }
