--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Apply shared configuration to subprojects
 buildscript {
-    ext.kotlinVersion = "1.3.31"
+    ext.kotlinVersion = "1.3.50"
 
     repositories {
         mavenCentral()
@@ -13,6 +13,7 @@ buildscript {
 
 plugins {
     id("base")
+    id("com.github.ben-manes.versions") version "0.27.0"
 }
 
 ext.base = project
@@ -28,7 +29,7 @@ subprojects {
         testImplementation("junit:junit:4.12")
         testImplementation("org.jetbrains.kotlin:kotlin-test-junit")
         testImplementation("org.mockito:mockito-inline:2.23.0")
-        testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0")
+        testImplementation("com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0")
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
