--- a/core/bukkit/build.gradle
+++ b/core/bukkit/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id("ru.endlesscode.bukkitgradle") version "0.8.1"
-    id("com.github.johnrengelman.shadow") version "2.0.4"
+    id("ru.endlesscode.bukkitgradle") version "0.8.2"
+    id("com.github.johnrengelman.shadow") version "5.1.0"
 }
 
 bukkit {
@@ -23,8 +23,8 @@ tasks.assemble.dependsOn(shadowJar)
 
 shadowJar {
     // Understandable filename
-    baseName = "$base.name-$project.name"
-    classifier = null
+    archiveBaseName.set("$base.name-$project.name")
+    archiveClassifier.set(null)
 
     // Avoid conflicts with others
     relocate("com.typesafe", "ru.endlesscode.rpginventory.shaded.com.typesafe")
