--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,7 @@ kotlin = "1.5.31"
 bukkit = "1.17.1"
 
 [libraries]
-hocon = "ninja.leaping.configurate:configurate-hocon:3.3"
-kotlinx-serialization-hocon = "org.jetbrains.kotlinx:kotlinx-serialization-hocon:1.3.0"
+hocon = "org.jetbrains.kotlinx:kotlinx-serialization-hocon:1.3.0"
 
 [plugins]
 bukkitgradle = "ru.endlesscode.bukkitgradle:0.10.0"
