--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ kotlin = "1.5.31"
 bukkit = "1.17.1"
 
 [libraries]
+mimic = "ru.endlesscode.mimic:mimic-bukkit-api:0.6.1"
 hocon = "org.jetbrains.kotlinx:kotlinx-serialization-hocon:1.3.0"
 
 [plugins]
