--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 depend:
   - Mimic
+  - CommandAPI
 libraries:
   - org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31
   - org.jetbrains.kotlinx:kotlinx-serialization-hocon:1.3.0
