--- a/core/src/test/resources/config/data.conf
+++ b/core/src/test/resources/config/data.conf
@@ -1,7 +1,7 @@
 // Inventories configuration
 inventories {
   default {
-    name = "RPGInventory"
+    name = "ECInventory"
     empty-slot-texture = null
     slots {
       24: left-ring
