--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group=ru.endlesscode
-version=3.0.0-SNAPSHOT
+version=0.1.0-SNAPSHOT
 description=Change inventory how you need
-url=https://gitlab.com/endlesscodegroup/rpginventory/rpginventory3
+url=https://github.com/EndlessCodeGroup/ECInventory
 org.gradle.jvmargs=-Xmx3G
 org.gradle.parallel=true
 org.gradle.daemon=true
