--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout sources
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Setup Java
       uses: actions/setup-java@v1
       with:
-        java-version: 17
+        java-version: 11
     - name: Run Check
       uses: eskatos/gradle-command-action@v1
       with:
