--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -4,3 +4,4 @@ depend:
 libraries:
   - org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31
   - org.jetbrains.kotlinx:kotlinx-serialization-hocon:1.3.0
+  - com.zaxxer:HikariCP:5.0.0
