feat(slot): Add denied items to config

--- a/core/src/test/resources/config/data.conf
+++ b/core/src/test/resources/config/data.conf
@@ -17,8 +17,9 @@ slots {
     texture = ring-slot
     allowed-items = [
       "minecraft:diamond_shovel",
-      "mimic:some_texture_item"
+      "mimic:ring_*"
     ]
+    denied-items: ["mimic:ring_slot"]
     type = passive
     max-stack-size = 1
   }
