feat(slot): Add description to slot config

--- a/core/src/test/resources/config/data.conf
+++ b/core/src/test/resources/config/data.conf
@@ -25,5 +25,9 @@ slots {
   }
   left-ring: ${slots.right-ring} {
     name = "Left ring"
+    description = [
+      "First line",
+      "Second line"
+    ]
   }
 }
