feat: Add PlaceholderAPI dependency

--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -1,6 +1,9 @@
 depend:
   - Mimic
   - CommandAPI
+softdepend:
+  - PlaceholderAPI
+  - ProRPGItems # We want to use its ItemsRegistry.
 libraries:
   - org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31
   - org.jetbrains.kotlinx:kotlinx-serialization-hocon:1.3.0
