feat(inventory): Add slot positions range parsing

--- a/core/src/test/resources/config/data.conf
+++ b/core/src/test/resources/config/data.conf
@@ -4,6 +4,8 @@ inventories {
     name = "ECInventory"
     empty-slot-texture = null
     slots {
+      0-2: amulet
+      1: ultimate-amulet
       24: left-ring
       26: right-ring
     }
@@ -29,5 +31,11 @@ slots {
       "First line",
       "Second line"
     ]
+  }
+  amulet {
+    name = "Amulet"
+  }
+  ultimate-amulet {
+    name = "Ultimate Amulet"
   }
 }
