--- a/core/src/test/resources/config/data.conf
+++ b/core/src/test/resources/config/data.conf
@@ -2,7 +2,7 @@
 inventories {
   default {
     name = "ECInventory"
-    empty-slot-texture = null
+    default-slot = empty
     slots {
       0-2: amulet
       1: ultimate-amulet
@@ -14,6 +14,9 @@ inventories {
 
 // Slots configuration
 slots {
+  empty {
+    type = visual
+  }
   right-ring {
     name = "Right ring"
     texture = ring-slot
