--- a/core/src/test/resources/config/data.conf
+++ b/core/src/test/resources/config/data.conf
@@ -15,7 +15,7 @@ inventories {
 // Slots configuration
 slots {
   empty {
-    type = visual
+    type = gui
   }
   right-ring {
     name = "Right ring"
@@ -25,7 +25,7 @@ slots {
       "mimic:ring_*"
     ]
     denied-items: ["mimic:ring_slot"]
-    type = passive
+    type = equipment
     max-stack-size = 1
   }
   left-ring: ${slots.right-ring} {
