feat(slot): Add slot actions config

--- a/core/src/test/resources/config/data.conf
+++ b/core/src/test/resources/config/data.conf
@@ -31,12 +31,17 @@ slots {
   left-ring: ${slots.right-ring} {
     name = "Left ring"
     description = [
-      "First line",
-      "Second line"
+      First line
+      Second line
     ]
   }
   amulet {
     name = "Amulet"
+    actions = [
+      {on: [left_click], do: ["say Left click"]}
+      {on: [shift_left_click, shift_right_click], do: ["say Shift click"]}
+      {on: [click], do: ["say Other click"]}
+    ]
   }
   ultimate-amulet {
     name = "Ultimate Amulet"
