refactor(slot): Rename name -> displayName and id -> name

--- a/core/src/test/resources/config/data.conf
+++ b/core/src/test/resources/config/data.conf
@@ -1,7 +1,7 @@
 // Inventories configuration
 inventories {
   default {
-    name = "ECInventory"
+    display-name = "ECInventory"
     default-slot = empty
     slots {
       0-2: amulet
@@ -18,7 +18,7 @@ slots {
     type = gui
   }
   right-ring {
-    name = "Right ring"
+    display-name = "Right ring"
     texture = ring-slot
     allowed-items = [
       "minecraft:diamond_shovel",
@@ -29,14 +29,14 @@ slots {
     max-stack-size = 1
   }
   left-ring: ${slots.right-ring} {
-    name = "Left ring"
+    display-name = "Left ring"
     description = [
       First line
       Second line
     ]
   }
   amulet {
-    name = "Amulet"
+    display-name = "Amulet"
     actions = [
       {on: [left_click], do: ["say Left click"]}
       {on: [shift_left_click, shift_right_click], do: ["say Shift click"]}
@@ -44,6 +44,6 @@ slots {
     ]
   }
   ultimate-amulet {
-    name = "Ultimate Amulet"
+    display-name = "Ultimate Amulet"
   }
 }
