--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -8,3 +8,8 @@ libraries:
   - org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.31
   - org.jetbrains.kotlinx:kotlinx-serialization-hocon:1.3.0
   - com.zaxxer:HikariCP:5.0.0
+permissions:
+  ecinventory.open:
+    default: true
+  ecinventory.open.others:
+    default: op
