--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 group=ru.endlesscode
-version=0.1.0-SNAPSHOT
+version=0.1
 description=Change inventory how you need
 url=https://github.com/EndlessCodeGroup/ECInventory
 org.gradle.jvmargs=-Xmx3G
