docs: Change js indentation 4 -> 2

--- a/.editorconfig
+++ b/.editorconfig
@@ -178,3 +178,7 @@ end_of_line = crlf
 
 [*.properties]
 ij_properties_keep_blank_lines = true
+
+[*.js]
+indent_size = 2
+ij_continuation_indent_size = 2
