--- a/website/package.json
+++ b/website/package.json
@@ -20,7 +20,9 @@
     "clsx": "^1.1.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "trim": "^0.0.3",
+    "nth-check": "^2.0.1"
   },
   "browserslist": {
     "production": [
