--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ bukkit = "1.18.1"
 [libraries]
 mimic = "ru.endlesscode.mimic:mimic-bukkit-api:0.6.2"
 hocon = "org.jetbrains.kotlinx:kotlinx-serialization-hocon:1.3.2"
-commandapi = "dev.jorel.CommandAPI:commandapi-core:6.4.0"
+commandapi = "dev.jorel:commandapi-core:8.5.1"
 mysql = "mysql:mysql-connector-java:8.0.27"
 hikaricp = "com.zaxxer:HikariCP:5.0.0"
 placeholderapi = "me.clip:placeholderapi:2.11.1"
