--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,19 +17,19 @@ jobs:
       run:
         working-directory: website
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: 16
 
       - name: Get yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
       - name: Cache dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
           key: ${{ runner.os }}-website-${{ hashFiles('**/yarn.lock') }}
@@ -40,7 +40,7 @@ jobs:
       - run: yarn docusaurus write-translations
 
       - name: Sync translations
-        uses: crowdin/github-action@1.4.4
+        uses: crowdin/github-action@1.4.12
         with:
           upload_translations: true
           download_translations: true
