--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,9 +31,9 @@ jobs:
 
       - run: yarn docusaurus write-translations
       - name: Sync translations
-        uses: crowdin/github-action@1.4.12
+        uses: crowdin/github-action@v1
         with:
-          upload_translations: true
+          upload_sources: true
           download_translations: true
           push_translations: false
           create_pull_request: false
