--- a/crowdin.yml
+++ b/crowdin.yml
@@ -17,9 +17,11 @@ preserve_hierarchy: true
 # https://support.crowdin.com/configuration-file/
 #
 files:
+  # JSON translation files
   - source: /website/i18n/en/**/*
     translation: /website/i18n/%two_letters_code%/**/%original_file_name%
     ignore: [/website/i18n/en/docusaurus-plugin-content-blog]
 
+  # Docs Markdown files
   - source: /website/docs/**/*
     translation: /website/i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/**/%original_file_name%
